Rename PopupElement to PanelElement; split classes into separate files (#1173)

--- a/ext/bg/welcome.html
+++ b/ext/bg/welcome.html
@@ -339,6 +339,7 @@
 <script src="/mixed/js/dom-data-binder.js"></script>
 <script src="/mixed/js/html-template-collection.js"></script>
 <script src="/mixed/js/object-property-accessor.js"></script>
+<script src="/mixed/js/panel-element.js"></script>
 <script src="/mixed/js/selector-observer.js"></script>
 <script src="/mixed/js/task-accumulator.js"></script>
 
@@ -351,11 +352,12 @@
 <script src="/bg/js/settings/dictionary-controller.js"></script>
 <script src="/bg/js/settings/dictionary-import-controller.js"></script>
 <script src="/bg/js/settings/generic-setting-controller.js"></script>
+<script src="/bg/js/settings/modal.js"></script>
 <script src="/bg/js/settings/modal-controller.js"></script>
-<script src="/bg/js/settings/popup-elements.js"></script>
 <script src="/bg/js/settings/popup-menu.js"></script>
 <script src="/bg/js/settings/scan-inputs-simple-controller.js"></script>
 <script src="/bg/js/settings/settings-controller.js"></script>
+<script src="/bg/js/settings/status-footer.js"></script>
 
 <script src="/bg/js/settings2/settings-display-controller.js"></script>
 
