--- a/ext/bg/settings2.html
+++ b/ext/bg/settings2.html
@@ -2559,6 +2559,7 @@
 <script src="/mixed/js/dom-data-binder.js"></script>
 <script src="/mixed/js/html-template-collection.js"></script>
 <script src="/mixed/js/object-property-accessor.js"></script>
+<script src="/mixed/js/panel-element.js"></script>
 <script src="/mixed/js/selector-observer.js"></script>
 <script src="/mixed/js/task-accumulator.js"></script>
 <script src="/mixed/js/text-to-speech-audio.js"></script>
@@ -2574,7 +2575,6 @@
 <script src="/bg/js/template-renderer-proxy.js"></script>
 
 <script src="/bg/js/settings/keyboard-mouse-input-field.js"></script>
-<script src="/bg/js/settings/popup-elements.js"></script>
 <script src="/bg/js/settings/profile-conditions-ui.js"></script>
 
 <script src="/bg/js/settings/anki-controller.js"></script>
@@ -2585,6 +2585,7 @@
 <script src="/bg/js/settings/dictionary-controller.js"></script>
 <script src="/bg/js/settings/dictionary-import-controller.js"></script>
 <script src="/bg/js/settings/generic-setting-controller.js"></script>
+<script src="/bg/js/settings/modal.js"></script>
 <script src="/bg/js/settings/modal-controller.js"></script>
 <script src="/bg/js/settings/popup-menu.js"></script>
 <script src="/bg/js/settings/popup-preview-controller.js"></script>
@@ -2592,6 +2593,7 @@
 <script src="/bg/js/settings/scan-inputs-controller.js"></script>
 <script src="/bg/js/settings/scan-inputs-simple-controller.js"></script>
 <script src="/bg/js/settings/settings-controller.js"></script>
+<script src="/bg/js/settings/status-footer.js"></script>
 <script src="/bg/js/settings/storage-controller.js"></script>
 
 <script src="/bg/js/settings2/nested-popups-controller.js"></script>
