Fix modals not being hidden by default on the welcome page (#1174)

--- a/ext/bg/welcome.html
+++ b/ext/bg/welcome.html
@@ -196,7 +196,7 @@
 
 
 <!-- Auxiliary content -->
-<div class="status-footer-container"><div class="status-footer-container2">
+<div class="status-footer-container" hidden><div class="status-footer-container2">
     <div class="status-footer">
         <div class="status-footer-header"><div class="status-footer-header-label">Tasks in progress:</div><a class="status-footer-header-close">Close</a></div>
         <div class="status-footer-item dictionary-delete-progress" hidden>
@@ -214,7 +214,7 @@
 
 
 <!-- Dictionary modals -->
-<div id="dictionaries" class="modal-container" tabindex="-1" role="dialog"><div class="modal-content">
+<div id="dictionaries" class="modal-container" tabindex="-1" role="dialog" hidden><div class="modal-content">
     <div class="modal-header"><div class="modal-title">Dictionaries</div></div>
     <div class="modal-body">
         <div class="settings-item">
@@ -279,7 +279,7 @@
     </div>
 </div></div>
 
-<div id="dictionary-confirm-delete" class="modal-container" tabindex="-1" role="dialog"><div class="modal-content modal-content-small">
+<div id="dictionary-confirm-delete" class="modal-container" tabindex="-1" role="dialog" hidden><div class="modal-content modal-content-small">
     <div class="modal-header"><div class="modal-title">Confirm Dictionary Deletion</div></div>
     <div class="modal-body">
         <p>Are you sure you want to delete the dictionary:</p>
@@ -292,7 +292,7 @@
     </div>
 </div></div>
 
-<div id="dictionary-confirm-delete-all" class="modal-container" tabindex="-1" role="dialog"><div class="modal-content modal-content-small">
+<div id="dictionary-confirm-delete-all" class="modal-container" tabindex="-1" role="dialog" hidden><div class="modal-content modal-content-small">
     <div class="modal-header"><div class="modal-title">Confirm Dictionary Deletion</div></div>
     <div class="modal-body">
         <p>Are you sure you want to delete <strong>all dictionaries</strong>?</p>
