Split material css (#1175)
* Separate material styles into a separate file

* Improve action button styles

* Rename --font-size-default to --font-size

* Remove px units

* Remove some material vars

* Fix some variable names

* Define variables

* Remove --shadow-vertical

* Revert name change

* Move var

* Rename var

* Update vars

* Remove redundant vars

* Update search styles

* Update styles

* Update colors

* Update variable names

* Include material.css on float.html page

--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" href="/mixed/img/icon48.png" sizes="48x48">
     <link rel="icon" type="image/png" href="/mixed/img/icon64.png" sizes="64x64">
     <link rel="icon" type="image/png" href="/mixed/img/icon128.png" sizes="128x128">
+    <link rel="stylesheet" type="text/css" href="/mixed/css/material.css">
     <link rel="stylesheet" type="text/css" href="/mixed/css/display.css">
     <link rel="stylesheet" type="text/css" href="/mixed/css/search.css">
 </head>
