--- a/ext/bg/welcome.html
+++ b/ext/bg/welcome.html
@@ -11,13 +11,14 @@
     <link rel="icon" type="image/png" href="/mixed/img/icon48.png" sizes="48x48">
     <link rel="icon" type="image/png" href="/mixed/img/icon64.png" sizes="64x64">
     <link rel="icon" type="image/png" href="/mixed/img/icon128.png" sizes="128x128">
+    <link rel="stylesheet" type="text/css" href="/mixed/css/material.css">
     <link rel="stylesheet" type="text/css" href="/bg/css/settings2.css">
     <style>
 .inline-icon {
     position: relative;
-    width: calc(1em * (16 / var(--font-size-default-no-units)));
-    height: calc(1em * (16 / var(--font-size-default-no-units)));
-    top: calc(1em * (3 / var(--font-size-default-no-units)));
+    width: calc(1em * (16 / var(--font-size-no-units)));
+    height: calc(1em * (16 / var(--font-size-no-units)));
+    top: calc(1em * (3 / var(--font-size-no-units)));
 }
     </style>
 </head>
