--- a/ext/bg/legal.html
+++ b/ext/bg/legal.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" href="/mixed/img/icon48.png" sizes="48x48">
     <link rel="icon" type="image/png" href="/mixed/img/icon64.png" sizes="64x64">
     <link rel="icon" type="image/png" href="/mixed/img/icon128.png" sizes="128x128">
+    <link rel="stylesheet" type="text/css" href="/mixed/css/material.css">
     <link rel="stylesheet" type="text/css" href="/bg/css/settings2.css">
     <style>
 pre {
