Display profile panel (#1178)
* Expose Display.displayGenerator

* Update search when assigning options context

* Don't clear selection unless the popup changes

* Merge search styles

* Create panel for changing the profile

--- a/ext/mixed/display-templates.html
+++ b/ext/mixed/display-templates.html
@@ -129,5 +129,9 @@
     <div class="footer-notification-body"></div>
     <button class="footer-notification-close-button"><span class="footer-notification-close-button-icon"></span></button>
 </div></template>
+<template id="profile-list-item-template"><label class="profile-list-item">
+    <div class="profile-list-item-selection"><label class="radio"><input type="radio" class="profile-entry-is-default-radio" name="profile-entry-default-radio"><span class="radio-body"><span class="radio-border"></span><span class="radio-dot"></span></span></label></div>
+    <div class="profile-list-item-name"></div>
+</label></template>
 
 </body></html>
