--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -54,6 +54,14 @@
             </div>
         </div>
         <div class="content-footer-container1"><div class="content-footer-container2"><div class="content-footer" id="content-footer"></div><div class="scrollbar-spacer scrollbar"></div></div></div>
+        <div class="overlay-panel-container">
+            <div class="overlay-panel scrollbar" id="profile-panel" hidden>
+                <div class="overlay-panel-inner">
+                    <h3>Default Profile</h3>
+                    <div class="profile-list" id="profile-list"></div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="content-sidebar scrollbar" id="content-sidebar" hidden>
         <div class="content-sidebar-inner">
@@ -65,7 +73,7 @@
                 <button class="sidebar-button" disabled id="navigate-next-button" title="Next definition (Alt + F)"><span class="sidebar-button-icon" data-icon="right-chevron"></span></button>
             </div>
             <div class="content-sidebar-bottom">
-                <!--<button class="sidebar-button" id="profile-button"><span class="sidebar-button-icon" data-icon="profile"></span></button>-->
+                <button class="sidebar-button" id="profile-button"><span class="sidebar-button-icon" data-icon="profile"></span></button>
             </div>
         </div>
     </div>
@@ -96,10 +104,12 @@
 <script src="/mixed/js/display-generator.js"></script>
 <script src="/mixed/js/display-history.js"></script>
 <script src="/mixed/js/display-notification.js"></script>
+<script src="/mixed/js/display-profile-selection.js"></script>
 <script src="/mixed/js/document-focus-controller.js"></script>
 <script src="/mixed/js/dynamic-loader.js"></script>
 <script src="/mixed/js/frame-endpoint.js"></script>
 <script src="/mixed/js/media-loader.js"></script>
+<script src="/mixed/js/panel-element.js"></script>
 <script src="/mixed/js/scroll.js"></script>
 <script src="/mixed/js/text-scanner.js"></script>
 <script src="/mixed/js/html-template-collection.js"></script>
