Improve location of Anki error message (#1180)

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -913,7 +913,7 @@
 
                     <div class="alert alert-danger" id="anki-error" hidden>
                         <span id="anki-error-message"></span><a id="anki-error-message-details-toggle">&hellip;</a>
-                        <div id="anki-error-message-details" hidden></div>
+                        <div id="anki-error-message-details-container" hidden><div id="anki-error-message-details"></div></div>
                     </div>
 
                     <div class="alert alert-danger" id="anki-error-invalid-response-info" hidden>
