--- a/ext/mixed/display-templates.html
+++ b/ext/mixed/display-templates.html
@@ -127,7 +127,7 @@
 <!-- Extra -->
 <template id="footer-notification-template"><div class="footer-notification">
     <div class="footer-notification-body"></div>
-    <button class="footer-notification-close-button"><span class="footer-notification-close-button-icon"></span></button>
+    <button class="footer-notification-close-button"><span class="footer-notification-close-button-icon icon" data-icon="cross"></span></button>
 </div></template>
 <template id="profile-list-item-template"><label class="profile-list-item">
     <div class="profile-list-item-selection"><label class="radio"><input type="radio" class="profile-entry-is-default-radio" name="profile-entry-default-radio"><span class="radio-body"><span class="radio-border"></span><span class="radio-dot"></span></span></label></div>
